--- a/index.html
+++ b/index.html
@@ -9,48 +9,48 @@
     <h1>Heading</h1>
     <div class="container">
         <div class="card" id="card-1">
-            <h2 class="card-header">card header</h2>
-            <img src="" alt="">
+            <h2 class="card-heading">1card heading</h2>
+            <img class="card-img" src="img/black.png" alt="">
             <h3 class="card-desc">card description</h3>
         </div>
         <div class="card" id="card-2">
-            <h2 class="card-header">card header</h2>
-            <img src="" alt="">
+            <h2 class="card-heading">2card heading</h2>
+            <img class="card-img" src="img/black.png" alt="">
             <h3 class="card-desc">card description</h3>
         </div>
         <div class="card" id="card-3">
-            <h2 class="card-header">card header</h2>
-            <img src="" alt="">
+            <h2 class="card-heading">3card heading</h2>
+            <img class="card-img" src="img/black.png" alt="">
             <h3 class="card-desc">card description</h3>
         </div>
         <div class="card" id="card-4">
-            <h2 class="card-header">card header</h2>
-            <img src="" alt="">
+            <h2 class="card-heading">4card heading</h2>
+            <img class="card-img" src="img/black.png" alt="">
             <h3 class="card-desc">card description</h3>
         </div>
         <div class="card" id="card-5">
-            <h2 class="card-header">card header</h2>
-            <img src="" alt="">
+            <h2 class="card-heading">5card heading</h2>
+            <img class="card-img" src="img/black.png" alt="">
             <h3 class="card-desc">card description</h3>
         </div>
         <div class="card" id="card-6">
-            <h2 class="card-header">card header</h2>
-            <img src="" alt="">
+            <h2 class="card-heading">6card heading</h2>
+            <img class="card-img" src="img/black.png" alt="">
             <h3 class="card-desc">card description</h3>
         </div>
         <div class="card" id="card-7">
-            <h2 class="card-header">card header</h2>
-            <img src="" alt="">
+            <h2 class="card-heading">7card heading</h2>
+            <img class="card-img" src="img/black.png" alt="">
             <h3 class="card-desc">card description</h3>
         </div>
         <div class="card" id="card-8">
-            <h2 class="card-header">card header</h2>
-            <img src="" alt="">
+            <h2 class="card-heading">8card heading</h2>
+            <img class="card-img" src="img/black.png" alt="">
             <h3 class="card-desc">card description</h3>
         </div>
         <div class="card" id="card-9">
-            <h2 class="card-header">card header</h2>
-            <img src="" alt="">
+            <h2 class="card-heading">9card heading</h2>
+            <img class="card-img" src="img/black.png" alt="">
             <h3 class="card-desc">card description</h3>
         </div>
     </div>
