set width limit on cards how

--- a/notes/index.html
+++ b/notes/index.html
@@ -7,6 +7,9 @@
 
 </head>
 <body>
+
+<!-- animation ideas: codepen -->
+
     <div class="container">
         <div class="card">
             <h2 class="card-header">card</h2>
@@ -54,7 +57,6 @@
             <h3 class="card-price">$9.99</h3>
         </div>
 
-    
 </div>
     
 </body>
