--- a/notes/index.html
+++ b/notes/index.html
@@ -9,7 +9,10 @@
 <body>
 
 <!-- animation ideas: codepen -->
-
+    <a href="https://sentry.io/answers/how-do-i-create-an-html-button-that-acts-like-a-link/">
+        <button>name of button</button>
+    </a>
+  
     <div class="container">
         <div class="card">
             <h2 class="card-header">card</h2>
