--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Heading</h1>
+    <div class="container-heading">
+        <h1>Heading</h1>
+    </div>
+    
     <div class="container">
         <div class="card" id="card-1">
             <h2 class="card-heading">1card heading</h2>
