--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="container-heading">
-        <h1>Heading</h1>
+    <div class="title-container">
+        <h1>title</h1>
     </div>
     
     <div class="container">
