--- a/index.html
+++ b/index.html
@@ -7,54 +7,56 @@
 </head>
 <body>
     <div class="title-container">
-        <h1>title</h1>
+        <h1>Dim Sum Menu</h1>
     </div>
-    
+    <!-- <a href="https://youtu.be/dQw4w9WgXcQ?si=twz-D2NE8puuDCIv">
+        <button>yum yum yum</button>
+    </a> -->
     <div class="container">
-        <div class="card" id="card-1">
-            <h2 class="card-heading">1card heading</h2>
-            <img class="card-img" src="img/black.png" alt="">
-            <h3 class="card-desc">card description</h3>
+        <div class="card" id="card-hargow">
+            <h2 class="card-heading">Shrimp dumplings<br />(har gow)</h2>
+            <img class="card-img" src="img/har-gow.png" alt="shrimp dumplings har gow dimsum">
+            <h3 class="card-desc">4 pieces: $6.99</h3>
         </div>
-        <div class="card" id="card-2">
-            <h2 class="card-heading">2card heading</h2>
-            <img class="card-img" src="img/black.png" alt="">
-            <h3 class="card-desc">card description</h3>
+        <div class="card" id="card-siumai">
+            <h2 class="card-heading">Pork & Shrimp dumplings<br />(siu mai)</h2>
+            <img class="card-img" src="img/siu-mai.png" alt="pork and shrimp dumplings siu mai dimsum">
+            <h3 class="card-desc">4 pieces: $6.99</h3>
         </div>
-        <div class="card" id="card-3">
-            <h2 class="card-heading">3card heading</h2>
-            <img class="card-img" src="img/black.png" alt="">
-            <h3 class="card-desc">card description</h3>
+        <div class="card" id="card-chickenfeet">
+            <h2 class="card-heading">Chicken feet</h2>
+            <img class="card-img" src="img/chicken-feet.png" alt="black bean sauce steamed chicken feet dimsum">
+            <h3 class="card-desc">1 serving: $8.99</h3>
         </div>
         <div class="card" id="card-4">
-            <h2 class="card-heading">4card heading</h2>
-            <img class="card-img" src="img/black.png" alt="">
-            <h3 class="card-desc">card description</h3>
+            <h2 class="card-heading">Pan-fried Turnip cake<br />(lo bak go)</h2>
+            <img class="card-img" src="img/turnip-cake.png" alt="turnip cake dimsum">
+            <h3 class="card-desc">3 pieces: $5.99</h3>
         </div>
         <div class="card" id="card-5">
-            <h2 class="card-heading">5card heading</h2>
-            <img class="card-img" src="img/black.png" alt="">
-            <h3 class="card-desc">card description</h3>
+            <h2 class="card-heading">Steamed Soup dumplings<br />(xiao long bao)</h2>
+            <img class="card-img" src="img/xiaolongbao.png" alt="xiao long bao steamed soup dumplings">
+            <h3 class="card-desc">3 pieces: $7.75</h3>
         </div>
         <div class="card" id="card-6">
-            <h2 class="card-heading">6card heading</h2>
-            <img class="card-img" src="img/black.png" alt="">
-            <h3 class="card-desc">card description</h3>
+            <h2 class="card-heading">Rice noodle rolls<br />(cheong fun)</h2>
+            <img class="card-img" src="img/churn-fun.png" alt="cheong fun rice noodle rolls">
+            <h3 class="card-desc">1 serving: $8.50</h3>
         </div>
         <div class="card" id="card-7">
-            <h2 class="card-heading">7card heading</h2>
-            <img class="card-img" src="img/black.png" alt="">
-            <h3 class="card-desc">card description</h3>
+            <h2 class="card-heading">Steamed pork ribs</h2>
+            <img class="card-img" src="img/pork-ribs.jpg" alt="steamed pork ribs">
+            <h3 class="card-desc">1 serving: $8.99</h3>
         </div>
         <div class="card" id="card-8">
-            <h2 class="card-heading">8card heading</h2>
-            <img class="card-img" src="img/black.png" alt="">
-            <h3 class="card-desc">card description</h3>
+            <h2 class="card-heading">Spring Rolls<br />(cheun goon)</h2>
+            <img class="card-img" src="img/spring-rolls.jpg" alt="spring rolls">
+            <h3 class="card-desc">4 pieces: $6.50</h3>
         </div>
         <div class="card" id="card-9">
-            <h2 class="card-heading">9card heading</h2>
-            <img class="card-img" src="img/black.png" alt="">
-            <h3 class="card-desc">card description</h3>
+            <h2 class="card-heading">Steamed Sticky Rice<br />(lo mai gai)</h2>
+            <img class="card-img" src="img/sticky-rice.png" alt="steamed sticky rice wrapped in leaves dimsum">
+            <h3 class="card-desc">1 serving: $4.75</h3>
         </div>
     </div>
 </body>
