--- a/index.html
+++ b/index.html
@@ -3,15 +3,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+    <title>Yummy yummy Dim Sum Menu</title>
 </head>
 <body>
     <div class="title-container">
         <h1>Dim Sum Menu</h1>
     </div>
-    <!-- <a href="https://youtu.be/dQw4w9WgXcQ?si=twz-D2NE8puuDCIv">
-        <button>yum yum yum</button>
-    </a> -->
     <div class="container">
         <div class="card" id="card-hargow">
             <h2 class="card-heading">Shrimp dumplings<br />(har gow)</h2>
