--- a/index.html
+++ b/index.html
@@ -25,36 +25,71 @@
             <img class="card-img" src="img/chicken-feet.png" alt="black bean sauce steamed chicken feet dimsum">
             <h3 class="card-desc">1 serving: $8.99</h3>
         </div>
-        <div class="card" id="card-4">
+        <div class="card" id="card-turnipcake">
             <h2 class="card-heading">Pan-fried Turnip cake<br />(lo bak go)</h2>
             <img class="card-img" src="img/turnip-cake.png" alt="turnip cake dimsum">
             <h3 class="card-desc">3 pieces: $5.99</h3>
         </div>
-        <div class="card" id="card-5">
+        <div class="card">
             <h2 class="card-heading">Steamed Soup dumplings<br />(xiao long bao)</h2>
             <img class="card-img" src="img/xiaolongbao.png" alt="xiao long bao steamed soup dumplings">
             <h3 class="card-desc">3 pieces: $7.75</h3>
         </div>
-        <div class="card" id="card-6">
+        <div class="card">
             <h2 class="card-heading">Rice noodle rolls<br />(cheong fun)</h2>
             <img class="card-img" src="img/churn-fun.png" alt="cheong fun rice noodle rolls">
             <h3 class="card-desc">1 serving: $8.50</h3>
         </div>
-        <div class="card" id="card-7">
+        <div class="card">
             <h2 class="card-heading">Steamed pork ribs</h2>
             <img class="card-img" src="img/pork-ribs.jpg" alt="steamed pork ribs">
             <h3 class="card-desc">1 serving: $8.99</h3>
         </div>
-        <div class="card" id="card-8">
+        <div class="card">
             <h2 class="card-heading">Spring Rolls<br />(cheun goon)</h2>
             <img class="card-img" src="img/spring-rolls.jpg" alt="spring rolls">
             <h3 class="card-desc">4 pieces: $6.50</h3>
         </div>
-        <div class="card" id="card-9">
+        <div class="card">
             <h2 class="card-heading">Steamed Sticky Rice<br />(lo mai gai)</h2>
             <img class="card-img" src="img/sticky-rice.png" alt="steamed sticky rice wrapped in leaves dimsum">
             <h3 class="card-desc">1 serving: $4.75</h3>
         </div>
-    </div>
+        <!-- cards start repeating here -->
+        <div class="card" id="card-hargow2">
+            <h2 class="card-heading">Shrimp dumplings<br />(har gow)</h2>
+            <img class="card-img" src="img/har-gow.png" alt="shrimp dumplings har gow dimsum">
+            <h3 class="card-desc">4 pieces: $6.99</h3>
+        </div>
+        <div class="card" id="card-siumai2">
+            <h2 class="card-heading">Pork & Shrimp dumplings<br />(siu mai)</h2>
+            <img class="card-img" src="img/siu-mai.png" alt="pork and shrimp dumplings siu mai dimsum">
+            <h3 class="card-desc">4 pieces: $6.99</h3>
+        </div>
+        <div class="card" id="card-chickenfeet2">
+            <h2 class="card-heading">Chicken feet</h2>
+            <img class="card-img" src="img/chicken-feet.png" alt="black bean sauce steamed chicken feet dimsum">
+            <h3 class="card-desc">1 serving: $8.99</h3>
+        </div>
+        <div class="card" id="card-turnipcake2">
+            <h2 class="card-heading">Pan-fried Turnip cake<br />(lo bak go)</h2>
+            <img class="card-img" src="img/turnip-cake.png" alt="turnip cake dimsum">
+            <h3 class="card-desc">3 pieces: $5.99</h3>
+        </div>
+        <div class="card">
+            <h2 class="card-heading">Steamed Soup dumplings<br />(xiao long bao)</h2>
+            <img class="card-img" src="img/xiaolongbao.png" alt="xiao long bao steamed soup dumplings">
+            <h3 class="card-desc">3 pieces: $7.75</h3>
+        </div>
+        <div class="card">
+            <h2 class="card-heading">Rice noodle rolls<br />(cheong fun)</h2>
+            <img class="card-img" src="img/churn-fun.png" alt="cheong fun rice noodle rolls">
+            <h3 class="card-desc">1 serving: $8.50</h3>
+        </div>
+        <div class="card">
+            <h2 class="card-heading">Steamed pork ribs</h2>
+            <img class="card-img" src="img/pork-ribs.jpg" alt="steamed pork ribs">
+            <h3 class="card-desc">1 serving: $8.99</h3>
+        </div>
 </body>
 </html>
