--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="title-container">
-        <h1>Dim Sum Menu</h1>
+        <h1 id="title">Dim Sum Menu</h1>
     </div>
     <div class="container">
         <div class="card" id="card-hargow">
